--- a/formulario.html
+++ b/formulario.html
@@ -28,7 +28,7 @@
     <label for="package"> Select Tour Package*: </label><br>
     <select name="package" id="package" required>
      <option value="goa"> Goa </option>
-     <option value="andhrapradesh"> Andhra Pradesh </option>
+     <option value="andhra-pradesh"> Andhra Pradesh </option>
      <option value="haryana"> Haryana </option>
      <option value="assam"> Assam </option>
     </select><br>
