--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     
     <meta charset="UTF-8">
-    <title> Formulário </title>
+    <title> Travel reservation form </title>
 
 </head>
 
